--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ body{
 
 .navbar{
     box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
-    background-color: #7260BE;
+    background-color: #7272ff;
     color: white;
     margin-bottom: 25px;
 }
@@ -41,8 +41,8 @@ li {
 
 
 .btn.btn-primary{
-    background-color: #7260BE;
-    border-color: #7260BE;
+    background-color: #7272ff;
+    border-color: #7272ff;
 }
 
 .btn.btn-primary.start-over {
@@ -75,7 +75,7 @@ body {
     text-align: center;
     margin-top: auto;
     padding: 1.5em;
-    background-color: #7260BE;
+    background-color: #7272ff;
 }
 
 .footer p {
