--- a/views/import-guide.ejs
+++ b/views/import-guide.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 <div class="container">
     <div id="guide">
-    <h1>Microsoft Excel&trade; Inport Best Practices</h1>
+    <h1>Microsoft Excel&trade; Import Best Practices</h1>
 
     
         <p>1. Click 'Download CSV File' button</p>
