--- a/views/generate.ejs
+++ b/views/generate.ejs
@@ -4,8 +4,7 @@
         <h1 class="display-4">Transform Your Blog into Social Posts</h1>
         <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts!</p>
         <hr class="my-4">
-        <p>Use your .csv file to edit, upload, and then inport into <a href="https://meetedgar.com/">Meet Edgar</a>, the social media automation platform.</p>
-        <p>Go to our .csv <a href="/import-guide">import guide</a> to see our Microsoft Excel&trade; importing best practices.</p>
+        <p>Please be aware that for best results, I recommend using webpages with more than 300 words of content.</p>
         <a class="btn btn-primary btn-lg" href="/import-guide" role="button">Learn more...</a>
       </div>
     </div>
@@ -16,7 +15,7 @@
             
             
             <div class="col-12 col-lg-4" id="blog-entry-url">     
-                <input type="text" name="url" placeholder="https://latishastyles.com" width="200px" class="form-control">
+                <input type="text" name="url" placeholder="https://www.claire-nicholson.com" width="200px" class="form-control">
             </div>
             <div class="col-12 col-lg-4" id="blog-entry-selection">  
             <select name="selection" id="selection" class="form-control">
