--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,6 @@
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ in Memphis for <a href="https://latishastyles.com/">LaTisha Styles</a>.</p>
-    <p>Created by <a href="https://jsbeginners.com">JSBeginners.com. 	&#9400; 2019.</a></p>
+    <p>Made by <a href="https://claire-nicholson.com">Claire Nicholson</a>.</p>
   </div>
 </div>
 </body>
