--- a/views/generate.ejs
+++ b/views/generate.ejs
@@ -2,10 +2,9 @@
 <div class="container">
 <div class="jumbotron">
         <h1 class="display-4">Transform Your Blog into Social Posts</h1>
-        <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts!</p>
+        <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts! Want to know more about social media? Find out more <a href="https://claire-nicholson.com/social-media/" style="color:#FF0000;">here</a></p>
         <hr class="my-4">
-        <p>Please be aware that for best results, I recommend using webpages with more than 300 words of content.</p>
-        <a class="btn btn-primary btn-lg" href="/import-guide" role="button">Learn more...</a>
+        <p>For best results, try links with more than 300 words on. </p>
       </div>
     </div>
 <div class="container blog-entry">
