--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,9 @@ body{
     background-color: white;
     font-family: 'Raleway', sans-serif;
 }
-
+.btn btn-primary start-over form-control {
+	background-color: #6bbaa3;
+}
 .navbar{
     box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
     background-color: #7272ff;
