--- a/views/generate.ejs
+++ b/views/generate.ejs
@@ -2,9 +2,9 @@
 <div class="container">
 <div class="jumbotron">
         <h1 class="display-4">Transform Your Blog into Social Posts</h1>
-        <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts! Want to know more about social media? Find out more <a href="https://claire-nicholson.com/social-media/" style="color:#FF0000;">here</a></p>
+        <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts!</p>
         <hr class="my-4">
-        <p>For best results, try links with more than 300 words on. </p>
+        <p>Want to know more about social media? Find out more <a href="https://claire-nicholson.com/social-media/" style="color:#7272ff;">here</a> For best results, try links with more than 300 words on. </p>
       </div>
     </div>
 <div class="container blog-entry">
