--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made by <a href="https://claire-nicholson.com">Claire Nicholson</a>.</p>
+    <p>Made by <a href="https://claire-nicholson.com">Claire Nicholson</a> &#169; 2021</p>
   </div>
 </div>
 </body>
