--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+.btn.btn-primary.start-over {
+    background-color: #6baaa3!important;
+    border: none!important;
+}
 body{
     background-color: white;
     font-family: 'Raleway', sans-serif;
