--- a/views/generate.ejs
+++ b/views/generate.ejs
@@ -4,7 +4,7 @@
         <h1 class="display-4">Transform Your Blog into Social Posts</h1>
         <p class="lead">Paste a link from one of your blog's post in the form below and then automatically generate social media posts!</p>
         <hr class="my-4">
-        <p>For best results, try links with more than 300 words on. </br>
+        <p>For best results, try links with more than 300 words on. </br> </br>
         Want to know more about social media? Find out more <a href="https://claire-nicholson.com/social-media/" style="color:#7272ff;">here</a> </p>
       </div>
     </div>
